Enable Assign Overview to a Group